kubernetes/talos/deploy/kitchenowl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenowl
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: kitchenowl
      release: kitchenowl
  template:
    metadata:
      labels:
        app: kitchenowl
        release: kitchenowl
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        # --- General ---
      - image: tombursch/kitchenowl:latest
        imagePullPolicy: Always
        name: kitchenowl
        
        securityContext:
          runAsUser: 65534
          runAsGroup: 65534
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        # ---------------

        # --- Mounts ---
        volumeMounts:
        - mountPath: /data
          name: kitchenowl-data
        # ---------------
      volumes:
      - name: kitchenowl-data
        persistentVolumeClaim:
          claimName: kitchenowl-data
