kubernetes/talos/deploy/kitchenowl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchenowl
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: kitchenowl
    release: kitchenowl
  type: ClusterIP
